# dit

./: .env.example  .gitignore  Cargo.toml
migrations/: 20240415190615_create_settings_table.sql  20240415190622_create_subscribers_table.sql
src/: main.rs
