[package]
name = "dit"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base36 = "0.0.1"
dotenv = "0.15.0"
frankenstein = { version = "0.30.3", default-features = false, features = ["async-http-client"] }
roux = "2.2.11"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.36.0", features = ["full"] }
